<resources>
    <string name="app_name">Gastos de viagem02</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total será de:</string>
    <string name="calcular">CALCULAR</string>
    <string name="RS">R$ 0</string>
    <string name="preencha_todos_campos">Preencha todos os campos!</string>
    <string name="valores_validos">Por favor informe valores válidos!</string>
</resources>